<resources>
    <string name="app_name">FPVR</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="gimbalStart_button">Start Gimbal</string>
    <string name="gimbalMove_button">Move Gimbal</string>
    <string name="GimbalModeButton">Gimbal Mode</string>
    <string name="yawLabel">yaw</string>
    <string name="pithcLabel">pitch</string>
    <string name="rollLabel">roll</string>
    <string name="statusLabelText">Status...</string>
</resources>
