<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:background="#ff000000" tools:context=".HomeActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->
    <TextView android:id="@+id/fullscreen_content" android:layout_width="match_parent"
        android:layout_height="match_parent" android:keepScreenOn="true" android:textColor="#33b5e5"
        android:textStyle="bold" android:textSize="50sp" android:gravity="center"
        android:text="@string/dummy_content" />

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
    <FrameLayout android:layout_width="match_parent" android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/statusLabel"
            android:layout_gravity="top|center_horizontal"
            android:gravity="fill_horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:gravity="left|center"
            android:id="@+id/gimbalPitchLayout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Medium Text"
                android:id="@+id/yawLabel" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Medium Text"
                android:id="@+id/pitchLabel" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Medium Text"
                android:id="@+id/rollLabel" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:id="@+id/gimbalButtonLayout">

            <Button
                style="?metaButtonBarButtonStyle"
                android:id="@+id/GimbalStartButton"
                android:layout_width="152dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/gimbalStart_button"
                android:background="#5700d2ff"
                android:layout_gravity="right|center_vertical"
                android:clickable="true" />

            <Button
                style="?metaButtonBarButtonStyle"
                android:id="@+id/GimbalModeButton"
                android:layout_width="152dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/GimbalModeButton"
                android:background="#5700d2ff"
                android:layout_gravity="right|center_vertical"
                android:clickable="true"
                android:layout_marginTop="5dp"/>

            <Button
                style="?metaButtonBarButtonStyle"
                android:id="@+id/GimbalMoveButton"
                android:layout_width="152dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/gimbalMove_button"
                android:background="#5700d2ff"
                android:layout_gravity="right|center_vertical"
                android:clickable="true"
                android:layout_marginTop="5dp"/>
        </LinearLayout>

    </FrameLayout>

</FrameLayout>
